<resources>
    <string name="app_name">AndroidElem</string>
    <string name="android_handler_post_demo">Handler Post Demo</string>
    <string name="android_handler_post">Handler post</string>
    <string name="android_handler_post_at_time">Handler post at time</string>
    <string name="android_handler_post_delay">Handler post delay</string>
    <string name="android_handler_post_test">Handler post test</string>
    <string name="android_handler_post_remove">Handler post handler remove</string>

    <string name="android_handler_message_demo">Handler Message Demo</string>
    <string name="android_handler_message_test">Handler message test</string>
    <string name="android_handler_message_obtain">Message.obtain + Handler.sendMessage</string>
    <string name="android_handler_message_target">Message.obtain + Message,sendToTarget</string>

    <string name="android_async_task">AsyncTask Demo</string>
    <string name="android_async_task_start">AsyncTask start</string>

    <string name="android_ndk_jni_demo">Ndk Jni Demo</string>

    <string name="android_traffic_states_demo">TrafficStates Demo</string>
    <string name="android_traffic_http_request">Http request OK</string>
    <string name="android_traffic_start_http">Start Http Request</string>
    <string name="android_traffic_stop_http">Stop Http Request</string>

    <string name="android_calendar_demo">Calendar Demo</string>
    <string name="android_webview_demo">WebView Demo</string>

    <string name="android_memleak_demo">MemoryLeak Demo</string>
    <string name="mem_text_1">memory leak 1</string>
    <string name="mem_text_2">memory leak 2</string>

    <string name="android_list_in_list_demo">List in list Demo</string>

</resources>
